package com.cjj.designpattern.behavioral.observer;

/**
 * Created by chenjj on 2018/12/29
 */
public class GraphObserver implements Observer{
    @Override
    public void update(NumberGenerator generator) {
        System.out.print("GraphObserver:");
        int count=generator.getNumber();
        for(int i=0;i<count;i++){
            System.out.print("*");
        }
        System.out.println("");
        try{
            Thread.sleep(100);
        }catch (InterruptedException e){
            e.printStackTrace();
        }
    }
}
