package com.cjj.designpattern.behavioral.observer;

/**
 * Created by chenjj on 2018/12/29
 */
public interface Observer {
    public abstract void update(NumberGenerator generator);
}
